@@ -5,6 +5,8 @@ Version 1.6:
    Maico Sertório (https://www.transifex.com/accounts/profile/aramaicus/)
  * Add the Ukrainian translation by zubr139 
    (https://www.transifex.com/accounts/profile/zubr139/)
+ * Add the Norwegian Nynorsk translation by bjorni
+   (https://www.transifex.com/accounts/profile/bjorni/)
 
 (2013-03-07)
  * Fix: the most popular list were never refreshed.
